--- a/README
+++ b/README
@@ -17,3 +17,9 @@ See Documentation/00-INDEX for a list of what is contained in each file.
 Please read the Documentation/process/changes.rst file, as it contains the
 requirements for building and running the kernel, and information about
 the problems which may result by upgrading your kernel.
+
+
+-----------------------------
+this project is used in Operating System Practice from Peking University Guan Xuetao.
+
+fork address : https://github.com/torvalds/linux
